--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-webview": "^13.15.0",
     "zod": "^3.25.76"
   },
