--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@hugeicons/core-free-icons": "^1.2.1",
+    "@hugeicons/react-native": "^1.0.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
