--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.20",
+    "expo-device": "~8.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
     "react": "19.1.0",
@@ -39,6 +42,7 @@
   "devDependencies": {
     "@expo/cli": "^54.0.13",
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.6",
     "concurrently": "^9.2.1",
     "typescript": "~5.9.2"
   },
