--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hugeicons/core-free-icons": "^1.2.1",
     "@hugeicons/react-native": "^1.0.7",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.5.0",
@@ -26,6 +27,8 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.20",
     "expo-device": "~8.0.9",
+    "expo-file-system": "^19.0.17",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
